Adjust global style

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,10 +1,17 @@
 <link href="https://fonts.googleapis.com/css?family=Martel+Sans&display=swap" rel="stylesheet">
 <style>
-  body {
-
+  *,
+  *::before,
+  *::after {
+    font-family: 'Martel Sans', sans-serif;
     margin: 0;
     padding: 0;
-    font-family: 'Martel Sans', sans-serif;
-
+    color: inherit;
   }
+
+  body {
+    box-sizing: border-box;
+    background-color: #EFEFEF;
+    color: #444;
+}
 </style>
